# goit-pythonweb-hw-012

./: .coverage  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  test_unit.db
docs/source/: conf.py  src.rst
migrations/: env.py
migrations/versions/: 1dd1225d8bbb_add_role_field_to_users.py  3a75cb67e605_enum.py  490f9dd3810f_add_refresh_token_to_users.py  558e27d71976_create_users_table.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/core/: logger.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/security/: passwords.py  tokens.py
src/services/: auth.py  cloudinary_service.py  email.py  redis_service.py
src/services/templates/: password_reset.html  verify_email.html
tests/: conftest.py
tests/integration/: test_auth_routes.py  test_contacts_routes.py  test_users_routes.py
tests/unit/: test_auth_service.py  test_avatar_service.py  test_contact_repository.py  test_email_service.py  test_password_service.py  test_redis_service.py  test_tokens_service.py  test_user_repository.py
