[project]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "DaryPet",email = "d7akkord@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "fastapi-mail (>=1.5.0,<2.0.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
    "redis (>=6.4.0,<7.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)",
    "jose (>=1.0.0,<2.0.0)",
    "python-multipart (>=0.0.9,<0.0.10)",
    "black (>=25.1.0,<26.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
pytest-cov = "^7.0.0"


[tool.poetry.group.test.dependencies]
pytest-asyncio = "^1.1.0"

